--- a/llama/env_requirements/psi.yml
+++ b/llama/env_requirements/psi.yml
@@ -111,16 +111,37 @@ dependencies:
   - zlib=1.2.13=h8cc25b3_0
   - zstd=1.5.5=hd43e919_0
   - pip:
+      - av==11.0.0
       - colorama==0.4.6
+      - coloredlogs==15.0.1
+      - ctranslate2==4.1.0
       - diskcache==5.6.3
+      - faster-whisper==1.0.1
+      - flatbuffers==24.3.7
       - fsspec==2024.2.0
       - huggingface-hub==0.21.4
+      - humanfriendly==10.0
+      - llama-cpp-python==0.2.56
+      - llvmlite==0.42.0
+      - more-itertools==10.2.0
       - msgpack==1.0.8
+      - numba==0.59.0
+      - onnxruntime==1.17.1
+      - openai-whisper==20231117
       - opencv-python==4.9.0.80
       - packaging==24.0
+      - protobuf==5.26.0
+      - pydub==0.25.1
+      - pyreadline3==3.4.1
       - pyzmq==25.1.2
+      - regex==2023.12.25
+      - safetensors==0.4.2
+      - tiktoken==0.6.0
+      - tokenizers==0.15.2
       - torchaudio==2.1.2
       - torchvision==0.16.2
       - tqdm==4.66.2
+      - transformers==4.38.2
+      - webrtcvad==2.0.10
       - zmq==0.0.0
 prefix: C:\Users\Alafate\miniconda3\envs\psi
