--- a/llama/env_requirements/retico.yml
+++ b/llama/env_requirements/retico.yml
@@ -153,6 +153,7 @@ dependencies:
       - jieba==0.42.1
       - joblib==1.3.2
       - jsonlines==1.2.0
+      - keyboard==0.13.5
       - kiwisolver==1.4.5
       - langcodes==3.3.0
       - lazy-loader==0.3
