--- a/env_requirements/retico.yml
+++ b/env_requirements/retico.yml
@@ -153,10 +153,12 @@ dependencies:
       - jieba==0.42.1
       - joblib==1.3.2
       - jsonlines==1.2.0
+      - keyboard==0.13.5
       - kiwisolver==1.4.5
       - langcodes==3.3.0
       - lazy-loader==0.3
       - librosa==0.10.1
+      - llama-cpp-python==0.2.53
       - llvmlite==0.42.0
       - markdown==3.6
       - matplotlib==3.8.3
