--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ __pycache__/
 .vscode/
 models
 logs/
-screens/
+run_plots/
 bodies/sara/Archive
 bodies/sara/davos2017_Data
 bodies/sara/2021-10-11_150610
