--- a/prompt_format_config.json
+++ b/prompt_format_config.json
@@ -13,7 +13,7 @@
     },
     "system_prompt": {
         "pre": "<<SYS>>",
-        "suf": "<</SYS>>"
+        "suf": "<</SYS>>\n\n"
     },
     "prompt": {
         "pre": "[INST] ",
