Update repo to add documentation with readthedocs
Create .readthedocs.yaml

Update .readthedocs.yaml

Update .readthedocs.yaml

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update retico-core to remove torch from requirements

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

test docker for pyaudio

test docker for pyaudio

test docker for pyaudio

test docker for pyaudio

modifs for install

modifs for install

modifs for install

modifs for install

modifs for install

modifs for install

modifs for install

modifs for docs

update docs

trying different version of ubuntu for docs building

modif docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

update docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,6 @@
 requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
-# [tool.setuptools]
-# py-modules = []
-
 [project]
 name = "simple-retico-agent"
 authors = [{ name = "Marius Le Chapelier", email = "mariuslechaper@gmail.com" }]
@@ -14,11 +11,11 @@ license = { file = "LICENSE" }
 version = "0.0.1"
 requires-python = ">=3.11.7"
 dependencies = [
-    # "transformers==4.39.1",                                           # requirement from CoquiTTS that was very slow to install
-    # "spacy==3.7.4",                                                   # requirement from CoquiTTS that was very slow to install
-    # "pydub",
-    # "webrtcvad",
-    # "faster_whisper==1.0.1",
+    "pydub",
+    "webrtcvad",
+    "faster_whisper",
+    "llama-cpp-python",
     "retico-core @ git+https://github.com/articulab/retico-core.git",
-    # "TTS @ git+https://github.com/articulab/CoquiTTS.git",
+    "TTS[py3117] @ git+https://github.com/articulab/CoquiTTS.git@dev",
+    # "TTS[versionless] @ git+https://github.com/articulab/CoquiTTS",
 ]
