update env install tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,6 @@ dependencies = [
     "faster_whisper",
     "llama-cpp-python",
     "retico-core @ git+https://github.com/articulab/retico-core.git",
-    "TTS[py3117] @ git+https://github.com/articulab/CoquiTTS.git@dev",
-    # "TTS[versionless] @ git+https://github.com/articulab/CoquiTTS",
+    # "TTS[py3117] @ git+https://github.com/articulab/CoquiTTS.git@dev",
+    "TTS[versionless] @ git+https://github.com/articulab/CoquiTTS",
 ]
