add documentation for plotting and visualization + modify the plot config files
modifs docs

modifs docs

modifs docs

modifs docs

modifs docs

modifs docs

modifs docs

--- a/src/simple_retico_agent/configs/plot_config_simple.json
+++ b/src/simple_retico_agent/configs/plot_config_simple.json
@@ -29,13 +29,6 @@
                     "marker_size": 15
                 }
             },
-            "EOT": {
-                "plot_settings": {
-                    "marker": "|",
-                    "marker_color": "r",
-                    "marker_size": 35
-                }
-            },
             "start_answer_generation": {
                 "plot_settings": {
                     "marker": "|",
@@ -43,11 +36,61 @@
                     "marker_size": 35
                 }
             },
-            "any_event": {
+            "EOT": {
                 "plot_settings": {
                     "marker": "|",
-                    "marker_color": "lightslategrey",
-                    "marker_size": 20
+                    "marker_color": "r",
+                    "marker_size": 35
+                }
+            }
+        }
+    },
+    "Speaker Simple Module": {
+        "events": {
+            "output_silence": {
+                "plot_settings": {
+                    "marker": "|",
+                    "marker_color": "darkgray",
+                    "marker_size": 7
+                }
+            },
+            "output_audio": {
+                "plot_settings": {
+                    "marker": "|",
+                    "marker_color": "seagreen",
+                    "marker_size": 10
+                }
+            }
+        }
+    },
+    "TTS Simple Module": {
+        "events": {
+            "after_synthesize": {
+                "plot_settings": {
+                    "marker": "|",
+                    "marker_color": "darkmagenta",
+                    "marker_size": 25
+                }
+            },
+            "before_synthesize": {
+                "plot_settings": {
+                    "marker": "|",
+                    "marker_color": "violet",
+                    "marker_size": 30
+                }
+            }
+        }
+    },
+    "LLM Simple Module": {
+        "events": {}
+    },
+    "ASR Whisper Simple Module": {
+        "events": {
+            "predict": {
+                "plot_settings": {
+                    "marker": "|",
+                    "marker_color": "darkmagenta",
+                    "marker_size": 25
                 }
             }
         }
@@ -93,51 +136,7 @@
             }
         }
     },
-    "TTS Simple Module": {
-        "events": {
-            "after_synthesize": {
-                "plot_settings": {
-                    "marker": "|",
-                    "marker_color": "darkmagenta",
-                    "marker_size": 25
-                }
-            },
-            "before_synthesize": {
-                "plot_settings": {
-                    "marker": "|",
-                    "marker_color": "violet",
-                    "marker_size": 30
-                }
-            }
-        }
-    },
-    "ASR Whisper Simple Module": {
-        "events": {
-            "predict": {
-                "plot_settings": {
-                    "marker": "|",
-                    "marker_color": "darkmagenta",
-                    "marker_size": 25
-                }
-            }
-        }
-    },
-    "Speaker Simple Module": {
-        "events": {
-            "output_silence": {
-                "plot_settings": {
-                    "marker": "|",
-                    "marker_color": "darkgray",
-                    "marker_size": 7
-                }
-            },
-            "output_audio": {
-                "plot_settings": {
-                    "marker": "|",
-                    "marker_color": "seagreen",
-                    "marker_size": 10
-                }
-            }
-        }
+    "Microphone Module": {
+        "events": {}
     }
 }
